--- a/IntramuralsSite/reactapp/package.json
+++ b/IntramuralsSite/reactapp/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^17.0.1",
     "react-google-login": "^5.2.2",
     "react-native": "^0.64.0",
+    "react-native-web": "^0.15.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.0"
