--- a/IntramuralsSite/reactapp/package.json
+++ b/IntramuralsSite/reactapp/package.json
@@ -3,14 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.2",
+    "bootstrap": "^4.6.0",
+    "prop-types": "^15.7.2",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.1",
     "react-native": "^0.64.0",
+    "react-native-elements": "^3.3.2",
+    "react-native-iphone-x-helper": "^1.3.1",
+    "react-native-paper": "^4.7.2",
+    "react-native-web": "^0.15.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-select": "^4.3.0",
+    "react-widgets": "^4.6.1",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
