--- a/IntramuralsSite/reactapp/package.json
+++ b/IntramuralsSite/reactapp/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^12.7.2",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "firebase": "^8.4.3",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.2",
