--- a/IntramuralsSite/reactapp/package.json
+++ b/IntramuralsSite/reactapp/package.json
@@ -15,6 +15,7 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.2",
+    "react-collapsible": "^2.8.3",
     "react-dom": "^17.0.1",
     "react-google-login": "^5.2.2",
     "react-native": "^0.64.0",
