--- a/IntramuralsSite/reactapp/package.json
+++ b/IntramuralsSite/reactapp/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "firebase": "^8.4.3",
+    "googleapis": "^39.2.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.2",
